--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
-    "com.unity.ai.navigation": "2.0.4",
-    "com.unity.cinemachine": "2.10.3",
+    "com.unity.ai.navigation": "2.0.5",
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.ext.nunit": "2.0.5",
+    "com.unity.feature.characters-animation": "1.0.0",
+    "com.unity.feature.development": "1.0.2",
+    "com.unity.feature.gameplay-storytelling": "1.0.0",
     "com.unity.feature.worldbuilding": "1.0.1",
-    "com.unity.ide.rider": "3.0.31",
-    "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.ide.vscode": "1.2.1",
+    "com.unity.ide.rider": "3.0.34",
     "com.unity.inputsystem": "1.11.2",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.postprocessing": "3.4.0",
